# event-driven-order-system

./: .gitignore  README.md
fulfilment/: pyproject.toml
gateway/: pyproject.toml
gateway/src/: main.py
gateway/src/api/: models.py  routes.py
gateway/src/core/: __init__.py  config.py  lifespan.py  security.py
gateway/src/grpc/: __init__.py  order.proto  order_pb2.py  order_pb2_grpc.py  order_rpc_client.py
orders/: pyproject.toml
payments/: pyproject.toml
services/gateway/: main.py
services/gateway/api/: models.py
services/gateway/core/: __init__.py  config.py  security.py
services/gateway/src/core/: __init__.py
